--- a/src/main/webapp/WEB-INF/i18n/application_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en.properties
@@ -17,3 +17,13 @@ label_header_arts=Show all articles
 label_header_categories=Show categories
 label_header_createArt=Create article
 label_header_lang=Language
+
+label_sign_login=Enter login
+label_sign_password=Enter password
+
+label_register_email=Enter e-mail address
+label_register_button=Register
+label_register_msg=Register form
+label_login_link=Login
+label_logout_link=Logout
+label_password=Password
