--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,21 @@
 validation.name.size=The title could has at least 7 symbols and not longer than 100 symbols
 validation.content.size=The content could contain at least 30 symbols
 
+validation.login.size=Login must be longer than {min} and shorter than {max} symbols
+validation.login.error=Login must contains only alphabet-symbols
+validation.email.size=Email address is too short
+validation.email.error=Email must be like emailAddress@emailDomain.com
+validation.password.size=Password must be longer than {min}
+
+validation.empty=Field must be not empty
+
 article_create_success=Article successfully created
 article_create_fail=Failed article creating
+
+register_fail=Failed to create new account
+register_success=New account is successfully created
+
+register_email_error=Account with this email is already exists
+register_login_error=Account with this login is already exists
+
+login_failed=Login failed
